Fix popup on small height screens

--- a/css/custom.css
+++ b/css/custom.css
@@ -110,6 +110,22 @@
   z-index: 10;
   overflow: scroll;
 }
+
+@media screen and (max-height: 500px) {
+  .overlay:target .popup {
+  background: #fff;
+  border-radius: 5px;
+  width: 80%;
+  height: 80%;
+  position: fixed;
+  top: 15%;
+  left: 10%;
+  padding: 25px;
+  z-index: 10;
+  overflow: scroll;
+  }
+}
+
 .overlay .popup {
     top: -100%;
     left: -100%;
